<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">15 Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="title">15 Puzzle</string>
    <string name="game_or">游戏以十五数码难题（15 Puzzle）为原型——Yvan游戏</string>
    <string name="num_mode">数字模式</string>
    <string name="pic_mode">图片模式</string>
    <string name="game_mode">游戏模式</string>
    <string name="pra_mode">练习模式</string>

    <color name="white">#FFFFFF</color>
    <color name="red">#FF0000</color>
    <color name="orange">#FF4500</color>
    <color name="gray">#808080</color>
    <color name="tengse">#afb4db</color>
    <color name="yellowgreen">#b2d235</color>

    <string name="order_seletor">阶数选择</string>
    <string name="moves">移动步数</string>
    <string name="time_left">剩余时间</string>
    <string name="userdefined_pic">自定义图片</string>
    <string name="restart">重来</string>
    <string name="pause">暂停</string>
    <string name="show_currentimg">查看当前图片</string>
    <string name="about_me_content">"         此游戏是根据经典的15数码难题开发的，随着阶数的增加，游戏难度会大幅增加。此外，本游戏加入了图片模式，您还可以自定义图片，这可跟普通的拼图有较大的区别哦。\n        游戏由本人独力制作，由于本人初学安卓，游戏尚有许多不完善的地方，所以请多见谅。您有什么意见或建议，可以联系我！以下是我的邮箱地址：yan_weixing@163.com"</string>
    <string name="yvan_game">Yvan游戏</string>
    <string name="support_me">谢谢您对我的支持!</string>
    <string name="how_to_play">怎样玩</string>
    <string name="sounds_on_off">关闭声音</string>
    <string name="rank_list">排行榜</string>
    <string name="about_me">关于</string>
    <string name="min_time">最短时间：</string>
    <string name="min_moves">最小步数：</string>
    <string name="set_time">(设定时间:</string>

</resources>