<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="com.yvan.numandjiapuzzle.MainActivity" >

    <LinearLayout
        android:id="@+id/relativeLayoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#009ad6"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/game_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_or"
            android:textStyle="italic" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutImgNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutText"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp" >

        <ImageView
            android:id="@+id/image_num"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/num_img" />

        <Button
            android:id="@+id/num_game"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/image_num"
            android:background="@drawable/orange_bg"
            android:text="@string/game_mode"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/num_pra"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/image_num"
            android:layout_alignRight="@+id/num_game"
            android:background="@drawable/gray_bg"
            android:text="@string/pra_mode"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutImgNum"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp" >

        <ImageView
            android:id="@+id/image_pic"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/pic_img" />

        <Button
            android:id="@+id/pic_game"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/image_pic"
            android:background="@drawable/orange_bg"
            android:text="@string/game_mode"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/pic_pra"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/image_pic"
            android:layout_alignRight="@+id/pic_game"
            android:background="@drawable/gray_bg"
            android:text="@string/pra_mode"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/settings" />

</RelativeLayout>